# ecocardiograma

./: .env.example  DEPLOY_FORCE_1751243405.md  DEPLOY_RENDER.md  INSTRUCOES_GITHUB.md  Procfile  app.py  app_new.py  create_test_user.py  dados_ecocardiograma_autenticos_20250625_030459.csv  dados_ecocardiograma_autenticos_20250625_030459.json  deploy.sh  deploy_requirements.txt  gunicorn.conf.py  import_laudos_database.py  inserts_ecocardiograma_autenticos_20250625_030459.sql  laudos_autenticos_completos.py  main.py  migrate_postgresql_real_data.py  models.py  novo_banco_ecocardiograma_20250625_031036.csv  novo_banco_ecocardiograma_20250625_031036.json  pyproject.toml  render.yaml  replit.md  requirements.tx  requirements.txt  routes.py  routes_new.py  sync_trigger.txt
attached_assets/: Pasted--1-Volume-Diast-lico-Final-VDF-m-todo-de-Teichholz-em-mL-Usa-o-di-metro-diast-lico-do-VE-DD-1750251689711_1750251689711.txt  README_1750188467108.md  __init___1750188544932.py  assinatura_medico_laudo_1750188588515.js  atualizacao_1750188544931.py  backup_1750188544930.py  banco_laudos_ecocardiograma_1750267632579.numbers  banco_laudos_ecocardiograma_1750298093960.json  branding_1750188608292.css  busca_modelos_1750188588515.js  cadastro_medico_1750188624880.html  calculos_1750188588514.js  delete_exame_1750188588514.js  diagnostico_1750188544930.py  documentacao_1750188544930.md  exames_paciente_1750188624880.html  formulario_exame_1750188624880.html  impressao_completa_1750188624879.html  index_1750188624879.html  index_1750188641729.html  instalador_1750188544930.py  (+27 more)
(+103 files in other folders)
