[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "seaborn>=0.13.2",
    "numpy>=2.3.0",
    "werkzeug>=3.1.3",
    "pillow>=11.2.1",
    "qrcode>=8.2",
    "python-dateutil>=2.9.0.post0",
    "matplotlib>=3.10.3",
    "reportlab>=4.4.1",
    "openpyxl>=3.1.5",
    "sqlalchemy>=2.0.41",
    "flask-wtf>=1.2.2",
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.4",
]
